:bug: 修复格式化会导致意外的空格

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,5 +15,5 @@
 }
 
 .font-template {
-	@apply font-[CabinetGrotesk-Variable, SourceHanSansSC-VF];
+	@apply font-[CabinetGrotesk-Variable\,SourceHanSansSC-VF];
 }
