--- a/src/v2/styles/main.scss
+++ b/src/v2/styles/main.scss
@@ -3,7 +3,13 @@
 }
 
 @font-face {
+	font-family: 'HarmonyOS Sans';
+	src: url('@/v2/assets/fonts/HarmonyOS_Sans/HarmonyOS_Sans_Medium.ttf');
+	font-display: swap;
+}
+
+@font-face {
 	font-family: 'HarmonyOS Sans SC';
-	src: url('@/v2/assets/fonts/HarmonyOS_Sans_SC/HarmonyOS_Sans_SC_Medium.ttf') format('woff2');
+	src: url('@/v2/assets/fonts/HarmonyOS_Sans_SC/HarmonyOS_Sans_SC_Medium.ttf');
 	font-display: swap;
 }
