:sparkles: 添加字体, 缩小排名, 添加 `zen` 等级图标

--- a/src/v2/styles/main.scss
+++ b/src/v2/styles/main.scss
@@ -13,3 +13,9 @@
 	src: url('@/v2/assets/fonts/HarmonyOS_Sans_SC/HarmonyOS_Sans_SC_Medium.ttf');
 	font-display: swap;
 }
+
+@font-face {
+	font-family: 'HUN';
+	src: url('@/v2/assets/fonts/HUN/HUN.ttf');
+	font-display: swap;
+}
